# spla

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: SPLA.pc.in  SPLAConfig.cmake  SPLAConfigVersion.cmake  SPLASharedConfig.cmake  SPLAStaticConfig.cmake  SPLATargets.cmake
cmake/modules/: FindARMPL.cmake  FindATLAS.cmake  FindBLASExt.cmake  FindBLIS.cmake  FindCRAY_LIBSCI.cmake  FindGenericBLAS.cmake  FindMKL.cmake  FindOPENBLAS.cmake  FindSCALAPACK.cmake  FindSCI.cmake
cmake/util/: blas_dgemm_symbol.h
docs/: Doxyfile
docs/source/: conf.py  context.rst  context_c.rst  errors_c.rst  exceptions.rst  gemm.rst  gemm_c.rst  gemm_sbs.rst  gemm_ssb.rst  index.rst  matrix_distribution.rst  matrix_distribution_c.rst  pgemm_sbs.rst  pgemm_sbs_c.rst  pgemm_ssb.rst  pgemm_ssb_c.rst  pgemm_ssbtr.rst  pgemm_ssbtr_c.rst  types.rst
examples/: example.c  example.cpp  example.f90
include/spla/: config.h.in  context.h  context.hpp  errors.h  exceptions.hpp  gemm.h  gemm.hpp  gemm_sbs.hpp  gemm_ssb.hpp  matrix_distribution.h  matrix_distribution.hpp  pgemm_sbs.h  pgemm_sbs.hpp  pgemm_ssb.h  pgemm_ssb.hpp  pgemm_ssbtr.h  pgemm_ssbtr.hpp  spla.f90  spla.h  spla.hpp  types.h
src/: CMakeLists.txt
src/block_generation/: block.hpp  block_cyclic_generator.cpp  block_cyclic_generator.hpp  matrix_block_generator.hpp  mirror_generator.hpp
src/gemm/: gemm_gpu.cpp  gemm_gpu.hpp  gemm_host.cpp  gemm_host.hpp
src/gemm_sbs/: gemm_sbs_gpu.cpp  gemm_sbs_gpu.hpp  gemm_sbs_host.cpp  gemm_sbs_host.hpp  multiply_sbs_gpu.hpp  stripe_gpu.cpp  stripe_gpu.hpp  stripe_host.cpp  stripe_host.hpp
src/gemm_ssb/: gemm_ssb_gpu.cpp  gemm_ssb_gpu.hpp  gemm_ssb_host.cpp  gemm_ssb_host.hpp  multiply_ssb_gpu.hpp  tile_gpu.cpp  tile_gpu.hpp  tile_host.cpp  tile_host.hpp
src/gpu_util/: gemm_gpu.cpp  gpu_blas_api.hpp  gpu_blas_handle.hpp  gpu_complex_type_conversion.hpp  gpu_device_guard.hpp  gpu_event_handle.hpp  gpu_helper.hpp  gpu_matrix_accessor.hpp  gpu_pointer_translation.hpp  gpu_runtime_api.hpp  gpu_stream_handle.hpp  gpu_transfer.hpp  multiply_gpu.cpp  multiply_gpu.hpp
src/memory/: allocator.hpp  allocator_collection.hpp  buffer.hpp  gpu_allocator.hpp  gpu_array_const_view.hpp  gpu_array_view.hpp  host_array_const_view.hpp  host_array_view.hpp  mpi_allocator.hpp  pinned_allocator.hpp  pool_allocator.hpp  simple_allocator.hpp
src/mpi_util/: mpi_check_status.hpp  mpi_communicator_handle.hpp  mpi_datatype_handle.hpp  mpi_init_handle.hpp  mpi_match_elementary_type.hpp  mpi_request_handle.hpp  mpi_window_handle.hpp
src/pgemm_sbs/: pgemm_sbs_gpu.cpp  pgemm_sbs_gpu.hpp  pgemm_sbs_host.cpp  pgemm_sbs_host.hpp  ring_sbs_gpu.cpp  ring_sbs_gpu.hpp  ring_sbs_host.cpp  ring_sbs_host.hpp  stripe_gpu.cpp  stripe_gpu.hpp  stripe_host.cpp  stripe_host.hpp
src/pgemm_ssb/: add_kernel.cpp  add_kernel.hpp  all_reduce_tile_gpu.cpp  all_reduce_tile_gpu.hpp  all_reduce_tile_host.cpp  all_reduce_tile_host.hpp  block_size_selection_ssb.hpp  pgemm_ssb_gpu.cpp  pgemm_ssb_gpu.hpp  pgemm_ssb_host.cpp  pgemm_ssb_host.hpp  ring_gpu.cpp  ring_gpu.hpp  ring_host.cpp  ring_host.hpp  ring_reduce_tile_gpu.cpp  ring_reduce_tile_gpu.hpp  ring_reduce_tile_host.cpp  ring_reduce_tile_host.hpp  ring_ssb_gpu.cpp  ring_ssb_gpu.hpp  ring_ssb_host.cpp  ring_ssb_host.hpp  tile_gpu.cpp  tile_gpu.hpp  tile_host.cpp  tile_host.hpp
src/spla/: context.cpp  context_internal.hpp  gemm.cpp  gemm_sbs.cpp  gemm_ssb.cpp  matrix_distribution.cpp  matrix_distribution_internal.cpp  matrix_distribution_internal.hpp  pgemm_sbs.cpp  pgemm_ssb.cpp  pgemm_ssbtr.cpp
src/timing/: rt_graph.cpp  rt_graph.hpp  timing.cpp  timing.hpp
src/util/: blas_interface.cpp  blas_interface.hpp  blas_threads_guard.hpp  block_size_selection.hpp  check_gemm_param.hpp  common_types.hpp  omp_definitions.hpp  stripe_state.hpp  tile_state.hpp  type_check.hpp
tests/: CMakeLists.txt  gtest_mpi.cpp  test_gemm.cpp  test_gemm_sbs.cpp  test_gemm_ssb.cpp  test_pool_allocator.cpp
tests/programs/: benchmark.cpp  benchmark_scalapack.cpp  main.cpp  run_tests.cpp
